# agent-harness-cli

./: .gitignore  AGENTS.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: publish.yml
docs/: workflow-controller-design.zh-CN.md
schemas/: check-result.schema.json  report.schema.json  task.schema.json
skills/harness-check-designer/: SKILL.md
skills/harness-check-designer/assets/: check_template.py
skills/harness-workflow-runner/: SKILL.md
src/agent_harness_cli/: __init__.py  cli.py  config.py  reporting.py  types.py
src/agent_harness_cli/llm/: __init__.py  codex_judge.py
src/agent_harness_cli/runners/: __init__.py  run_checks.py  view.py  workflow.py
tests/: test_runner.py
