[project]
name = "agent-harness-cli"
version = "0.1.0"
description = "A lightweight scaffold for evaluating agentic tasks with structured checks."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
agent-harness = "agent_harness_cli.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["agent_harness_cli*"]
